crates/strider/tests/snapshots/v2__x86__stack__inplace_swap.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "9" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "14" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
}
