crates/strider/tests/snapshots/v2__x86__stack__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "4" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "4" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4012a0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "4" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x401150:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "10" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x4012c0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v19" [color="#888888", style=dashed];
  "v19" -> "16" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "16" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "18" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v23" [color="#888888", style=dashed];
  "v23" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "13" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "27" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x401367:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "10" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v38" [color="#888888", style=dashed];
  "v38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "40" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x401357:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "7" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v46" [color="#888888", style=dashed];
  "v46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "47" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x401347:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "4" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "4" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "4" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "56" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "5" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "5" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x401333:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "54" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "59" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "64" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "67" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x40130f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "69" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "71" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "72" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
